# openeduarchive

./: .env.example  .gitignore  Dockerfile  Makefile  Pipfile  README.md  docker-compose.full.yml  docker-compose.oea.prod.yml  docker-compose.yml  docker-services.yml  invenio.cfg
.github/: dependabot.yml
.github/.workflows/: oea-build.yml
.github/workflows/: oea-build.yml  release.yml
app_data/: pages.yaml  vocabularies.yaml
app_data/pages/: guida.html
app_data/vocabularies/: oea_discipline.yaml  oea_education_level.yaml
assets/js/components/deposit_ui/overrides/: MetadataToggle.js
assets/js/invenio_app_rdm/overridableRegistry/: mapping.js
assets/less/site/globals/: site.variables
doc/: commands.md
doc/architecture/decisions/: 0001-record-architecture-decisions.md  0002-migrate-to-12-0-0b1.md  0003-mapping-fare-metadata-on-top-of-datacite.md  0003-restricting-permission-set-for-communities.md  0004-content-creation-is-strictly-tied-to-communities.md  0005-dedicated-documentation-folder.md  0005-restyling-deposit-ui.md  0006-dedicated-documentation-folder.md  0007-use-rdm-rc2.md  0008-oauth2-email-via-microsoft-graph-api.md
docker/nginx/: test.crt  test.key
docker/pgadmin/: servers.json
site/: .gitkeep  setup.cfg
site/openeduarchive/: __init__.py  ext.py  permissions.py  views.py  webpack.py
site/openeduarchive/mail/: __init__.py  __main__.py  oauth2.py  test_send.py  token_setup.py
static/css/: oea.css
templates/oea/: custom_base_template.html
templates/semantic-ui/invenio_app_rdm/: footer.html  frontpage.html  site_footer.html
