
[metadata]
name = openeduarchive

[options.extras_require]
tests =
    pytest-invenio>=2.1.0,<3.0.0

[options.entry_points]
invenio_base.api_apps =
    openeduarchive_ext = openeduarchive.ext:OpenEducationArchive
invenio_base.apps =
    openeduarchive_ext = openeduarchive.ext:OpenEducationArchive
invenio_base.blueprints =
    openeduarchive_views = openeduarchive.views:create_blueprint
invenio_assets.webpack =
    openeduarchive_theme = openeduarchive.webpack:theme
